[project]
name = "comfy"
version = "0.0.1"
dependencies = [
  "torch",
  "torchsde",
  "torchvision",
  "einops",
  "transformers>=4.25.1",
  "safetensors>=0.3.0",
  "aiohttp",
  "pyyaml",
  "Pillow",
  "scipy",
  "tqdm",
  "psutil",
  "kornia>=0.7.1",
]

[tool.poetry]
name = "comfy"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
torch  = {version = "*", source = "torch-amd"}
pytorch-triton-rocm = {version = "*", source = "torch-amd"}
torchsde  = "*"
torchvision  = {version = "*", source = "torch-amd"}
einops  = "*"
transformers = ">=4.25.1"
safetensors = ">=0.3.0"
aiohttp = "*"
pyyaml = "*"
Pillow = "*"
scipy  = "*"
tqdm = "*"
psutil  = "*"
kornia = ">=0.7.1"

[[tool.poetry.source]]
name = "torch-amd"
url = "https://download.pytorch.org/whl/rocm6.0"
priority = "explicit"

[[tool.poetry.source]]
name = "torch-nvidia"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

